home page complited

--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Helth Quad</title>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 </head>
+
 <body>
-    
+    <!-- Hero -->
+    <div class="text-center bg-image rounded-3">
+        <div class="mask">
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="text-white">
+                    <div class="logo">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                    <div class="textAriea">
+                        <h1 class="mb-3">Lorem Ipsum is simply dummy </h1>
+                        <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                    <div class="timeBg">
+                        <div class="dateText">
+                            <p>15</p>
+                            <h1>JAN</h1>
+                        </div>
+                        <div class="dateTime">
+                            <p>Time & place</p>
+                            <div class="testiBox">
+                                <a><img src="images/wall-clock.png" width="23" height="23" alt=""> <span>10 : 00 - 15 :
+                                        00</span> </a>
+                                <a><img src="images/pin.png" width="23" height="23" alt=""> <span>Delhi</span> </a>
+                            </div>
+                        </div>
+                        <div class="cb"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Hero -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!------------------ bootstrap js--------------------->
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
