Registration text edit

--- a/home.html
+++ b/home.html
@@ -81,9 +81,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">Health<span>Quad</span></h2>
+            <h2 data-aos="fade-down">Health <span>Quad</span></h2>
             
-            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Resister Now</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Register Now</a>
           </div>
         </div>
       </div>
@@ -126,7 +126,7 @@
 
           <div class="col-lg-5" data-aos="fade">
             <form action="forms/quote.php" method="post" class="php-email-form">
-              <h3>Resistration</h3>
+              <h3>Registration</h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               <div class="row gy-3">
 
@@ -151,7 +151,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
 
-                  <button type="submit">Get a quote</button>
+                  <button type="submit">Submit</button>
                 </div>
 
               </div>
@@ -243,7 +243,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Health Quad</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
       
