--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                     <div class=" col-sm-12">
                         <a href="Login.html" class="logingBg" >Login</a>
-                        <a href="home.html" class="logingBg" >Resistre</a>
+                        <a href="home.html" class="logingBg" >Register</a>
                       
                     </div>
 
