fab icone deleted

--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
                     </div>
                     <div class="timeBg">
                         <div class="dateText">
-                            <p>15</p>
-                            <h1>JAN</h1>
+                            <p>10</p>
+                            <h1>Nov</h1>
                         </div>
                         <div class="dateTime">
                             <p>Time & place</p>
                             <div class="testiBox">
-                                <a><img src="images/wall-clock.png" width="23" height="23" alt=""> <span>10 : 00 - 15 :
-                                        00</span> </a>
-                                <a><img src="images/pin.png" width="23" height="23" alt=""> <span>Delhi</span> </a>
+                                <a><img src="images/wall-clock.png" width="23" height="23" alt=""> <span>10 : 00 AM</span> </a>
+                                <a><img src="images/pin.png" width="23" height="23" alt=""> <span>Mumbai</span> </a>
                             </div>
                         </div>
                         <div class="cb"></div>
