--- a/home.html
+++ b/home.html
@@ -46,7 +46,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">Agenda</a></li>
+          <li><a href="agenda.html">Agenda</a></li>
+          <li><a href="accommodation.html">Hotel Accommodation</a></li>
            <!-------------
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
            
@@ -117,32 +118,64 @@
 
         <div class="row justify-content-between gy-4">
 
-          <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
-            <div class="content">
-              <h3>What is Lorem Ipsum?</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </div>
-          </div>
 
-          <div class="col-lg-5" data-aos="fade">
+          <div class="col-lg-12" data-aos="fade">
             <form action="forms/quote.php" method="post" class="php-email-form">
               <h3>Registration</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <p>All fields are mandatory</p>
               <div class="row gy-3">
-
-                <div class="col-md-12">
-                  <input type="text" name="name" class="form-control" placeholder="Name" required>
-                </div>
-
-                <div class="col-md-12 ">
+                <div class="col-md-6 ">
                   <input type="email" class="form-control" name="email" placeholder="Email" required>
                 </div>
-
+                <div class="col-md-6 ">
+                  <select class="form-select form-control" aria-label="Default select example">
+                    <option selected>select </option>
+                    <option value="1">Male</option>
+                    <option value="2">Female</option>
+                    <option value="3">Transgender</option>
+                  </select>
+                </div>
+                <div class="col-md-4">
+                  <input type="text" name="name" class="form-control" placeholder="First Name " required>
+                </div>
+                <div class="col-md-4">
+                  <input type="text" name="name" class="form-control" placeholder="Middle Name " required>
+                </div>
+                <div class="col-md-4">
+                  <input type="text" name="name" class="form-control" placeholder="Last Name " required>
+                </div>
                 <div class="col-md-12">
                   <input type="text" class="form-control" name="phone" placeholder="Phone" required>
                 </div>
 
-                
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="customCheck2">
+                  <label class="custom-control-label" for="customCheck2">Will there is anyone else traveling with you. Kindly fill their details 
+                    </label>
+                </div>
+                <div class="col-md-6 ">
+                  <input type="pan" class="form-control" name="pan" placeholder="PAN" required>
+                </div>
+                <div class="col-md-6 ">
+                  <select class="form-select" aria-label="Default select example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-md-4">
+                  <input type="text" name="name" class="form-control" placeholder="First Name " required>
+                </div>
+                <div class="col-md-4">
+                  <input type="text" name="name" class="form-control" placeholder="Middle Name " required>
+                </div>
+                <div class="col-md-4">
+                  <input type="text" name="name" class="form-control" placeholder="Last Name " required>
+                </div>
+                <div class="col-md-12">
+                  <input type="text" class="form-control" name="phone" placeholder="Phone" required>
+                </div>
 
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
