--- a/accommodation.html
+++ b/accommodation.html
@@ -81,10 +81,10 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>About</h2>
+        <h2>Accommodation</h2>
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>About</li>
+          <li>Accommodation</li>
         </ol>
 
       </div>
@@ -99,7 +99,7 @@
           <div class="col-lg-7 about-img" style="background-image: url(assets/img/about.jpg);"></div>
 
           <div class="col-lg-7">
-            <h2>Consequatur eius et magnam</h2>
+            <h2>Option 1</h2>
             <div class="our-story">
               <h4>Est 1988</h4>
               <h3>Our Story</h3>
