--- a/accommodation.html
+++ b/accommodation.html
@@ -45,8 +45,8 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="agenda.html">Agenda</a></li>
+          <li><a href="index.html" >Home</a></li>
+          <li><a href="agenda.html" class="active" >Agenda</a></li>
           <li><a href="accommodation.html">Hotel Accommodation</a></li>
            <!-------------
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -156,7 +156,7 @@
 
     <div class="row position-relative">
 
-      <div class="col-lg-7 about-img" style="background-image: url(assets/img/option2.jpg);"></div>
+      <div class="col-lg-7 about-img" style="background-image: url(assets/img/option3.jpg);"></div>
 
       <div class="col-lg-7">
         <h2>Option 3</h2>
