contact pages added

--- a/agenda.html
+++ b/agenda.html
@@ -46,8 +46,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" >Home</a></li>
-          <li><a href="agenda.html"  >Agenda</a></li>
-          <li><a href="accommodation.html" class="active">Hotel Accommodation</a></li>
+          <li><a href="agenda.html" class="active" >Agenda</a></li>
+          <li><a href="accommodation.html" >Hotel Accommodation</a></li>
            <!-------------
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
            
