--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" >Home</a></li>
-          <li><a href="agenda.html" class="active" >Agenda</a></li>
+          <li><a href="agenda.html" >Agenda</a></li>
           <li><a href="accommodation.html" >Hotel Accommodation</a></li>
            <!-------------
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -72,7 +72,7 @@
             </ul>
            
           </li>  ------------->
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
