--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     </div>
 
                     <div class=" col-sm-12">
-                        <a href="Login.html" class="logingBg" >Login</a>
-                        <a href="home.html" class="logingBg" >Register</a>
+                        
+                        <a href="home.html" class="logingBg" >Continue</a>
                       
                     </div>
 
